--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "flv.js": "^1.5.0",
     "install": "^0.13.0",
     "lodash": "^4.17.15",
     "npm": "^6.10.2",
